--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -76,6 +76,15 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<section>
+	<form>
+		<input type="submit"
+			   value="Delete Venue"
+			   class="btn btn-primary btn-sm btn-block"
+			   formmethod="POST"
+			   formaction="{{ url_for('delete_venue', venue_id=venue.id) }}">
+	</form>
+</section>
 
 {% endblock %}
 
